tests/NormalTests/paczka2/big_fuzzy/85475087.err
Error in line 3: ze50maz97tN S915 53,6
Error in line 15: ze50maz97tN Ab34 b7,8
Error in line 14: o369Q6GH S915 25,0
Error in line 11: ze50maz97tN A234 40,9
Error in line 38: 0PNNV A152 78,4
Error in line 51: S915 S839 36,4
Error in line 60: ze50maz97tN S839 61,8
Error in line 62: ze50maz97tN S915 24,1
Error in line 75: 9SUtTzb S915 15,5
Error in line 77: laqbW A152 36,3
Error in line 100: 9SUtTzb A234 89,1
Error in line 109: 0PNNV S839 27,1
Error in line 113: ze50maz97tN S915 57,1
Error in line 117: ze50maz97tN A234 97,6
Error in line 136: laqbW A234 87,4
Error in line 137: laqbW S915 55,6
Error in line 154: ze50maz97tN A152 67,0
Error in line 159: ze50maz97tN S839 69,0
Error in line 175: ze50maz97tN S915 39,6
Error in line 148: X45Y8tJHP A152 23,0
Error in line 168: 9SUtTzb A234 99,5
Error in line 174: o369Q6GH S839 308,1
Error in line 181: o369Q6GH A234 2,0
Error in line 183: o369Q6GH S915 8,2
Error in line 200: X45Y8tJHP A234 45,0
Error in line 186: S915 S915 90,9
Error in line 209: o369Q6GH S915 44,8
Error in line 202: X45Y8tJHP S839 61,5
Error in line 238: ze50maz97tN S839 183,5
Error in line 237: 0PNNV A234 54,4
